[package]
name = "pig"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.1", features = ["derive"] }
egui = "0.28.1"
egui-wgpu = "0.28.1"
egui-winit = "0.28.1"
glam = { version = "0.29.2", features = ["bytemuck"] }
image = "0.25.2"
noise = "0.9.0"
pollster = { version = "0.3.0", features = ["macro"] }
rayon = "1.10.0"
regex = "1.10.5"
wgpu = "0.20.1"
winit = "0.29"
